[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/shield_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/shadow_circle.png" type="Texture" id=2]
[ext_resource path="res://PinningProperties/EnemyBase.gd" type="Script" id=3]
[ext_resource path="res://assets/exclamation-mark.svg" type="Texture" id=4]
[ext_resource path="res://assets/lightning.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.223529 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.809524, 0.809524 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.68302, 0.933033 ),
"update": 0,
"values": [ Vector2( 0, -44 ), Vector2( 0, -34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.223529 ), Color( 1, 1, 1, 0.368627 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.809524, 0.809524 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 254.197

[sub_resource type="CircleShape2D" id=4]
radius = 37.054

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.223529 )
scale = Vector2( 0.809524, 0.809524 )
texture = ExtResource( 2 )

[node name="ExclamationMark" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )
offset = Vector2( 0, -120 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -44 )
texture = ExtResource( 1 )

[node name="Cannon" type="Sprite" parent="Sprite"]
unique_name_in_owner = true
show_behind_parent = true
scale = Vector2( 0.5, 1 )
texture = ExtResource( 5 )
offset = Vector2( 20, 0 )

[node name="Position2D" type="Position2D" parent="Sprite/Cannon"]
unique_name_in_owner = true
position = Vector2( 50, -0.227573 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/float = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, -22 )
shape = SubResource( 3 )

[node name="CoolDownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -43 )
shape = SubResource( 4 )
